--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -97,4 +97,146 @@ body {
   width: 56%;
 }
 
+/** Animation */
+
+@keyframes white-rect {
+  0% {
+    height: 0;
+  }
+  100% {
+    height: 15vw;
+  }
+}
+@keyframes title {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(-50%);
+    opacity: 1;
+  }
+}
+@keyframes shrink-rect {
+  0% {
+    height: 15vw;
+  }
+  100% {
+    height: 63px;
+  }
+}
+@keyframes shrink-title {
+  0% {
+    transform: translateY(-50%);
+    width: 65vw;
+  }
+  100% {
+    transform: translateY(0);
+    top: 16px;
+    width: 300px;
+  }
+}
+@keyframes delete-rect-title {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    z-index: 0;
+  }
+}
+@keyframes show-nav {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+/* Apply the animations to the relevant elements */
+#white-rect {
+  position: absolute;
+  z-index: 20;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #fcfcfc;
+  animation-name: white-rect, shrink-rect, delete-rect-title;
+  animation-duration: 2s, 3s, 1s;
+  animation-delay: 500ms, 5s, 9s;
+  animation-timing-function: ease, ease, ease;
+  animation-iteration-count: 1, 1, 1;
+  animation-fill-mode: forwards, forwards, forwards;
+}
+#title {
+  position: absolute;
+  height: fit-content;
+  opacity: 0;
+  width: 65.1vw;
+  top: 15.3vw;
+  left: 0;
+  right: 0;
+  margin: auto;
+  z-index: 30;
+  transform: translate(-50%, -100%);
+  animation-name: title, shrink-title, delete-rect-title;
+  animation-duration: 3s, 3s, 1s;
+  animation-delay: 2250ms, 5s, 9s;
+  animation-timing-function: ease, ease, ease-in;
+  animation-iteration-count: 1, 1, 1;
+  animation-fill-mode: forwards, forwards, forwards;
+}
+#menu {
+  left: -100%;
+  position: fixed;
+  top: 60px;
+  width: 100%;
+  z-index: 30;
+}
+.openMenu {
+  animation-name: menu-in, reveal;
+  animation-duration: 750ms, 750ms;
+  animation-delay: 0, 10s;
+  animation-timing-function: ease, ease;
+  animation-fill-mode: forwards, forwards;
+}
+
+.closeMenu {
+  animation-name: menu-out, hidden;
+  animation-duration: 750ms, 750ms;
+  animation-delay: 0, 10s;
+  animation-timing-function: ease, ease;
+  animation-fill-mode: forwards, forwards;
+}
+@keyframes menu-in {
+  0% {
+    right: 100%;
+  }
+  100% {
+    left: 0;
+  }
+}
+@keyframes menu-out {
+  0% {
+    left: 0;
+  }
+  100% {
+    right: 100%;
+  }
+}
+@keyframes hidden {
+  0% {
+    visibility: visible;
+  }
+  100% {
+    visibility: hidden;
+  }
+}
+@keyframes reveal {
+  0% {
+    visibility: hidden;
+  }
+  100% {
+    visibility: visible;
+  }
+}
 @tailwind utilities;
