--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -167,6 +167,7 @@ body {
   animation-iteration-count: 1, 1, 1;
   animation-fill-mode: forwards, forwards, forwards;
 }
+  /* mr-[0.5vw] 2xl:mr-[1.5vw] */
 #title {
   position: absolute;
   height: fit-content;
@@ -174,7 +175,7 @@ body {
   width: 65.1vw;
   top: 15.3vw;
   left: 0;
-  right: 0;
+  right: 0.5vw;
   margin: auto;
   z-index: 30;
   transform: translate(-50%, -100%);
@@ -237,6 +238,11 @@ body {
   }
   100% {
     visibility: visible;
+  }
+}
+@media (min-width: 1536px) {
+  #title {
+    right: 1.5vw;
   }
 }
 @tailwind utilities;
